various Xcode and project fixes

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,11 +1,12 @@
 #add_subdirectory(Animation)
 
 if(XCODE)
-  get_resources_source_list(MoonDog ALL_RESOURCES)
+  get_resources_source_list(BindStone ALL_RESOURCES)
+  source_group(TREE ${CMAKE_SOURCE_DIR} PREFIX "Resources" FILES ${ALL_RESOURCES})
 endif()
 
-add_executable(MoonDog main.cpp StdAfx.cpp ${ALL_RESOURCES})
-copy_resources(MoonDog)
+add_executable(BindStone main.cpp StdAfx.cpp ${ALL_RESOURCES})
+copy_resources(BindStone)
 
 add_subdirectory(Utility)
 add_subdirectory(ArtificialIntelligence)
@@ -17,7 +18,14 @@ add_subdirectory(Interface)
 add_subdirectory(Network)
 add_subdirectory(Physics)
 
-target_link_libraries(MoonDog
+# Group source files
+file(GLOB_RECURSE TREE_SOURCES LIST_DIRECTORIES false *.cpp *.c)
+source_group(TREE ${CMAKE_SOURCE_DIR}/Source PREFIX "Source Files" FILES ${TREE_SOURCES})
+
+file(GLOB_RECURSE TREE_HEADERS LIST_DIRECTORIES false *.hpp *.h)
+source_group(TREE ${CMAKE_SOURCE_DIR}/Source PREFIX "Header Files" FILES ${TREE_HEADERS})
+
+target_link_libraries(BindStone
   CONAN_PKG::OpenSSL
   CONAN_PKG::Box2D
   CONAN_PKG::chaiscript
@@ -32,23 +40,26 @@ target_link_libraries(MoonDog
   CONAN_PKG::boolinq
 )
 
-target_include_directories(MoonDog PRIVATE ${CMAKE_SOURCE_DIR}/Source)
+target_include_directories(BindStone PRIVATE ${CMAKE_SOURCE_DIR}/Source)
 
-target_compile_options(MoonDog PRIVATE
+target_compile_options(BindStone PRIVATE
 )
 
-target_compile_definitions(MoonDog PRIVATE
+target_compile_definitions(BindStone PRIVATE
 )
 
 if(NOT XCODE)
-  add_precompiled_header(MoonDog StdAfx.h SOURCE_CXX StdAfx.cpp FORCEINCLUDE)
+  add_precompiled_header(BindStone StdAfx.h SOURCE_CXX StdAfx.cpp FORCEINCLUDE)
 endif()
 
-set_target_properties(MoonDog PROPERTIES
+set_target_properties(BindStone PROPERTIES
   MACOSX_BUNDLE_BUNDLE_NAME BindStone
   MACOSX_BUNDLE_GUI_IDENTIFIER com.mutedvision.bindstone
   MACOSX_BUNDLE_BUNDLE_VERSION ${APP_VERSION}
   MACOSX_BUNDLE_LONG_VERSION_STRING ${APP_VERSION}
   MACOSX_BUNDLE_SHORT_VERSION_STRING ${APP_VERSION}
-#  MACOSX_BUNDLE_ICON_FILE 
+  MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/CMake/Info.plist.in
+  XCODE_ATTRIBUTE_GCC_PREFIX_HEADER "${PROJECT_SOURCE_DIR}/Source/StdAfx.h"
+  XCODE_ATTRIBUTE_GCC_PRECOMPILE_PREFIX_HEADER "YES"
+#  MACOSX_BUNDLE_ICON_FILE
 )
