--- a/Source/Interface/CMakeLists.txt
+++ b/Source/Interface/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(MoonDog PRIVATE
+target_sources(BindStone PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/Mouse.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Mouse.h
   ${CMAKE_CURRENT_SOURCE_DIR}/package.h
