--- a/Source/Audio/CMakeLists.txt
+++ b/Source/Audio/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-target_sources(MoonDog PRIVATE
+target_sources(BindStone PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/package.h
   ${CMAKE_CURRENT_SOURCE_DIR}/sound.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/sound.h
