Fix asset compilation
Former-commit-id: 9e463561cedd26ac1f65a05afda2d535d8232770 [formerly 6d98cc15ea7b7cb9c1a94325ee38a315c1603aca]
Former-commit-id: 2ade6a4d2e46e9331c4f13d2d3a12a765730bbb5

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -61,5 +61,6 @@ set_target_properties(BindStone PROPERTIES
   MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/CMake/Info.plist.in
   XCODE_ATTRIBUTE_GCC_PREFIX_HEADER "${PROJECT_SOURCE_DIR}/Source/StdAfx.h"
   XCODE_ATTRIBUTE_GCC_PRECOMPILE_PREFIX_HEADER "YES"
+  RESOURCE "${ALL_RESOURCES}"
 #  MACOSX_BUNDLE_ICON_FILE
 )
