Better rotation method, updated networkable object begun.
Former-commit-id: 3270be7fbede469a6e958e484743d07dec8280ee [formerly 528f3df9a642622da507906da2f77c02ab8c3646]
Former-commit-id: f3f748b6c72a676d70b9eceac243b2987cf6ce88

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -327,6 +327,7 @@
     <ClCompile Include="Source\Game\NetworkLayer\accountActions.cpp" />
     <ClCompile Include="Source\Game\NetworkLayer\clientActions.cpp" />
     <ClCompile Include="Source\Game\NetworkLayer\gameServerActions.cpp" />
+    <ClCompile Include="Source\Game\NetworkLayer\networkObject.cpp" />
     <ClCompile Include="Source\Game\player.cpp" />
     <ClCompile Include="Source\Game\state.cpp" />
     <ClCompile Include="Source\Game\wallet.cpp" />
@@ -585,8 +586,8 @@
     <ClInclude Include="Source\Game\NetworkLayer\gameServerActions.h" />
     <ClInclude Include="Source\Game\NetworkLayer\lobbyServer.h" />
     <ClInclude Include="Source\Game\NetworkLayer\networkAction.h" />
+    <ClInclude Include="Source\Game\NetworkLayer\networkObject.h" />
     <ClInclude Include="Source\Game\NetworkLayer\package.h" />
-    <ClInclude Include="Source\Game\NetworkLayer\serverActions.h" />
     <ClInclude Include="Source\Game\player.h" />
     <ClInclude Include="Source\Game\state.h" />
     <ClInclude Include="Source\Game\wallet.h" />
