Copy resource to the correct asset directory
Former-commit-id: e380e15c61d8d25929b79e5dcdc9844b0b415394 [formerly 3b484f93f0b9254338e9587b2e9e5eeb4e41c78c]
Former-commit-id: cdbf57cbea29f87ada7205b30765eb25e2a9cc94

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ endif()
 include(CMake/PrecompiledHeader.cmake)
 include(CMake/Resources.cmake)
 
-add_resources(TARGET BindStone SOURCES ${CMAKE_SOURCE_DIR}/Assets DEST .)
+add_resources(TARGET BindStone SOURCES ${CMAKE_SOURCE_DIR}/Assets DEST Assets)
 if(APPLE)
   add_resources(TARGET BindStone SOURCES ${CMAKE_SOURCE_DIR}/LaunchScreen DEST .)
 endif()
