Finally get it to work on iOS
Former-commit-id: 7b0cb56a39beb831f9b4fd4c56226327ee41f02c [formerly 0d942ced3b2d3e9ac60904e14c8c1232dac7c269]
Former-commit-id: da7032500b9b8393b63b7419e32f8c0d7c2d6ed8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup(TARGETS)
+conan_basic_setup(TARGETS NO_OUTPUT_DIRS)
 
 if(${CMAKE_GENERATOR} MATCHES "Xcode")
   set(XCODE TRUE)
