--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -584,6 +584,9 @@
     <ClCompile Include="..\external\spine\VertexEffect.c">
       <Filter>Spine</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\NetworkLayer\synchronizeAction.cpp">
+      <Filter>Source Files\Game\NetworkLayer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Audio\package.h">
@@ -1410,6 +1413,15 @@
     </ClInclude>
     <ClInclude Include="..\external\ChaiScript-6.0.0\include\chaiscript\utility\utility.hpp">
       <Filter>Chaiscript</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\NetworkLayer\synchronizeAction.h">
+      <Filter>Source Files\Game\NetworkLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Network\networkObject.h">
+      <Filter>Source Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Utility\services.h">
+      <Filter>Source Files\Utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
