--- a/Source/Network/CMakeLists.txt
+++ b/Source/Network/CMakeLists.txt
@@ -7,4 +7,5 @@ target_sources(MoonDog PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/url.h
   ${CMAKE_CURRENT_SOURCE_DIR}/email.h
   ${CMAKE_CURRENT_SOURCE_DIR}/package.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/networkObject.h
 )
