--- a/MVLibrary/MVLibrary.vcxproj
+++ b/MVLibrary/MVLibrary.vcxproj
@@ -582,4 +582,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <PropertyGroup Condition="'$(Language)'=='C++'">
+  <CAExcludePath>..\..\external\;$(CAExcludePath)</CAExcludePath>
+  </PropertyGroup>
 </Project>
